# AlphaDuel

./: .gitignore  README.md  docker-compose.yml  project_requirement.md  run.sh
backend/: Dockerfile  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  bear.py  bull.py  graph.py  prompts.py  referee.py
backend/app/models/: __init__.py  state.py
backend/app/routes/: __init__.py  debate.py
backend/app/services/: __init__.py  hedera.py  market_data.py
backend/app/test/: draw_graph.py
backend/hedera_logs/: hcs_log_218d9757956b9887.json  transfer_84a399fed4bcb49b.json
backend/scripts/: transfer_hbar.js
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BearBubble.tsx  BullBubble.tsx  ChatInput.tsx  DebateArena.tsx  Header.tsx  RefereeCard.tsx  SystemMessage.tsx  index.ts
frontend/src/hooks/: useDebate.ts
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
