[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.10.10",
    "fastapi==0.115.0",
    "hedera-sdk-py>=2.50.0",
    "hiero-sdk-python>=0.1.7",
    "httpx==0.27.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "python-json-logger==2.0.7",
    "sse-starlette==2.1.3",
    "tavily-python==0.5.0",
    "uvicorn[standard]==0.30.6",
]
